k8s/list.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: list
  name: list
  namespace: default
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: list
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: list
  name: list
  namespace: default
spec:
  selector:
    matchLabels:
      app: list
  replicas: 1
  template:
    metadata:
      labels:
        app: list
    spec:
      containers:
        - image: docker.io/cmwylie19/lists-v1:latest
          name: list
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
