k8s/vs-lists.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-list-8080 
            namespace: gloo-system
   
      # options:
      #   prefixRewrite: '/api/invalid'
